fixed styling issue on safari

--- a/app/javascript/stylesheets/components/_tags.scss
+++ b/app/javascript/stylesheets/components/_tags.scss
@@ -1,5 +1,5 @@
 .tag {
-  @apply py-1.5 px-2.5 rounded-lg cursor-pointer border-2 border-gray-100 hover:border-gray-200;
+  @apply py-1.5 px-2.5 rounded-lg cursor-pointer border-2 border-gray-100 hover:border-gray-200 whitespace-nowrap;
 
   h4 {
     @apply text-sm;
